// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FatherSonComponent Debe de hacer match con el snapshot 1`] = `
<div
  id="root1"
>
  <h5>
    Hijo
  </h5>
  <code>
    
  </code>
  <br />
  <br />
  <div
    class="d-flex gap-2"
  >
    
    
  </div>
</div>
`;

exports[`FatherSonComponent Deben de match con el snapshot si hay cliente 1`] = `
<div
  id="root4"
>
  <h5>
    Hijo
  </h5>
  <code>
    {
  "id": 1,
  "name": "Juan"
}
  </code>
  <br />
  <br />
  <div
    class="d-flex gap-2"
  >
    <button
      class="btn btn-primary"
      data-test="btn-update-client"
    >
       Cambiar ID 
    </button>
    
    <button
      class="btn btn-danger"
      data-test="btn-delete-client"
    >
       Borrar cliente 
    </button>
    
  </div>
</div>
`;
